Opened 7 years ago

Closed 5 years ago

#8279 closed defect (fixed)

outside the range of representable values of type 'int' at libavfilter/vf_fftdnoiz.c:159

Reported by: Suhwan Owned by:
Priority: normal Component: undetermined
Version: git-master Keywords: ubsan
Cc: Blocked By:
Blocking: Reproduced by developer: no
Analyzed by developer: no

Description

Summary of the bug:
There is an outside the range of representable values of type 'int' at libavfilter/vf_fftdnoiz.c:159

I compiled ffmpeg with "--toolchain=clang-usan" to check the undefined-behaviours and attached log file.
How to reproduce:

% ffmpeg_g -stream_loop 17 -y -r 81 -i $PoC -filter_complex fftdnoiz -target dvd -map 0 tmp.ea_cdata

ffmpeg version N-95385-ge1b89c76f6 Copyright (c) 2000-2019 the FFmpeg developers
built with clang version 6.0.0-1ubuntu2 (tags/RELEASE_600/final)
configuration: --cc=clang --cxx=clang++ --ld=clang --enable-debug --toolchain=clang-usan

Here's UBSAN log

libavfilter/vf_fftdnoiz.c:159:32: runtime error: 1.04064e+10 is outside the range of representable values of type 'int'

Thread 1 "ffmpeg_g" hit Breakpoint 1, 0x0000000000428860 in __ubsan::ScopedReport::~ScopedReport() ()
(gdb) bt
#0  0x0000000000428860 in __ubsan::ScopedReport::~ScopedReport() ()
#1  0x000000000042a496 in handleFloatCastOverflow(void*, unsigned long, __ubsan::ReportOptions) ()
#2  0x000000000042ccc1 in __ubsan_handle_float_cast_overflow ()
#3  0x000000000097da23 in export_row8 (src=<optimized out>, dst=<optimized out>, rw=<optimized out>, 
    scale=<optimized out>, depth=<optimized out>) at libavfilter/vf_fftdnoiz.c:159
#4  0x00000000009740e1 in export_plane (s=<optimized out>, dstp=<optimized out>, 
    buffer=<optimized out>, buffer_linesize=<optimized out>, dst_linesize=<optimized out>, 
    plane=<optimized out>) at libavfilter/vf_fftdnoiz.c:358
#5  filter_frame (inlink=<optimized out>, in=<optimized out>) at libavfilter/vf_fftdnoiz.c:599
#6  0x00000000005cfe4d in ff_filter_frame_framed (link=<optimized out>, frame=0x0)
    at libavfilter/avfilter.c:1084
#7  ff_filter_frame_to_filter (link=<optimized out>) at libavfilter/avfilter.c:1232
#8  ff_filter_activate_default (filter=<optimized out>) at libavfilter/avfilter.c:1281
#9  ff_filter_activate (filter=<optimized out>) at libavfilter/avfilter.c:1443
#10 0x00000000005f426f in push_frame (graph=0x91111c0) at libavfilter/buffersrc.c:187
#11 av_buffersrc_add_frame_internal (ctx=<optimized out>, frame=0x9149b80, flags=<optimized out>)
    at libavfilter/buffersrc.c:261
#12 0x00000000005f2e2e in av_buffersrc_add_frame_flags (ctx=0x9150380, frame=0x9149b80, flags=4)
    at libavfilter/buffersrc.c:170
#13 0x00000000004cad10 in ifilter_send_frame (ifilter=<optimized out>, frame=<optimized out>)
    at fftools/ffmpeg.c:2186
#14 send_frame_to_filters (ist=0x910d6c0, decoded_frame=0x9149b80) at fftools/ffmpeg.c:2260
#15 0x00000000004a076c in decode_video (ist=<optimized out>, pkt=<optimized out>, 
    got_output=<optimized out>, duration_pts=<optimized out>, eof=<optimized out>, 
    decode_failed=<optimized out>) at fftools/ffmpeg.c:2459
#16 process_input_packet (ist=<optimized out>, pkt=<optimized out>, no_eof=<optimized out>)
    at fftools/ffmpeg.c:2613
#17 0x00000000004b8887 in process_input (file_index=0) at fftools/ffmpeg.c:4269
#18 0x000000000048d59b in transcode_step () at fftools/ffmpeg.c:4628
#19 transcode () at fftools/ffmpeg.c:4682
#20 0x0000000000487d54 in main (argc=17, argv=<optimized out>) at fftools/ffmpeg.c:4884

Please confirm.
Thanks

Attachments (1)

PoC_vf_fftdnoiz_159.webp (114 bytes ) - added by Suhwan 7 years ago.
poc

Download all attachments as: .zip

Change History (2)

by Suhwan, 7 years ago

Attachment: PoC_vf_fftdnoiz_159.webp added

poc

comment:1 by Elon Musk, 5 years ago

Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.